updating for render setup

--- a/example_fastapi_react_vite_optimized copy.ipynb
+++ b/example_fastapi_react_vite_optimized copy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 35,
    "id": "bf67aa45",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 36,
    "id": "80a61c56",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 37,
    "id": "760d795c",
    "metadata": {},
    "outputs": [
@@ -478,18 +478,24 @@
     "%%writefile render.yaml\n",
     "services:\n",
     "  - type: web\n",
-    "    name: ml-backend\n",
+    "    name: ml_backend\n",
     "    runtime: python\n",
     "    plan: free\n",
-    "    buildCommand: pip install -r backend/requirements.txt\n",
-    "    startCommand: cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT\n",
+    "    rootDir: backend\n",
+    "    buildCommand: pip install -r requirements.txt\n",
+    "    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT\n",
+    "    healthCheckPath: /health\n",
     "    autoDeploy: true\n",
-    "    healthCheckPath: /health "
+    "    envVars:\n",
+    "      - key: PYTHON_VERSION\n",
+    "        value: 3.12.2\n",
+    "      - key: MLFLOW_TRACKING_URI\n",
+    "        value: file:./mlruns_local\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 38,
    "id": "f9cc997d",
    "metadata": {},
    "outputs": [
@@ -522,12 +528,15 @@
    "id": "64bd01d0",
    "metadata": {},
    "source": [
-    "# Backend"
+    "# Backend\n",
+    "\n",
+    "deploy hook:\n",
+    "https://api.render.com/deploy/srv-d1ksa4ndiees73eu7u3g?key=7iZbEPDcq8w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 39,
    "id": "eb81edf7",
    "metadata": {},
    "outputs": [
@@ -546,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 40,
    "id": "f25a842a",
    "metadata": {},
    "outputs": [
@@ -569,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 41,
    "id": "2fdf9832",
    "metadata": {},
    "outputs": [
@@ -588,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 42,
    "id": "6e486eda",
    "metadata": {},
    "outputs": [
@@ -607,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 43,
    "id": "a8614215",
    "metadata": {},
    "outputs": [
@@ -626,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 44,
    "id": "7ba9eff0",
    "metadata": {},
    "outputs": [
@@ -645,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 45,
    "id": "87336ac7",
    "metadata": {},
    "outputs": [
@@ -653,12 +662,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting requirements.txt\n"
+      "Overwriting backend/requirements.txt\n"
      ]
     }
    ],
    "source": [
-    "%%writefile requirements.txt\n",
+    "%%writefile backend/requirements.txt\n",
     "fastapi>=0.104.0\n",
     "uvicorn>=0.24.0\n",
     "pydantic>=2.4.2\n",
@@ -672,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 46,
    "id": "bda8c3a0",
    "metadata": {},
    "outputs": [
@@ -726,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 47,
    "id": "c3cd52d9",
    "metadata": {},
    "outputs": [
@@ -761,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 48,
    "id": "33fe907d",
    "metadata": {},
    "outputs": [
@@ -868,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 49,
    "id": "0e3bbb80",
    "metadata": {},
    "outputs": [
@@ -982,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 50,
    "id": "be2f77ed",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 51,
    "id": "4ba5076d",
    "metadata": {},
    "outputs": [
@@ -1275,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 52,
    "id": "d2340c8c",
    "metadata": {},
    "outputs": [
@@ -1450,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 53,
    "id": "9132b544",
    "metadata": {},
    "outputs": [
@@ -1586,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 54,
    "id": "c401848b",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 55,
    "id": "89f03a64",
    "metadata": {},
    "outputs": [
@@ -2049,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 56,
    "id": "1d87ca37",
    "metadata": {},
    "outputs": [
@@ -2156,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 57,
    "id": "ebec606e",
    "metadata": {},
    "outputs": [
@@ -2209,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 58,
    "id": "7e8150b1",
    "metadata": {},
    "outputs": [
@@ -2233,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 59,
    "id": "c3974081",
    "metadata": {},
    "outputs": [
@@ -2278,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 60,
    "id": "d1a46149",
    "metadata": {},
    "outputs": [
@@ -2324,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 61,
    "id": "2dcd9330",
    "metadata": {},
    "outputs": [
@@ -2356,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 62,
    "id": "239c57ce",
    "metadata": {},
    "outputs": [
@@ -2406,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 63,
    "id": "d0c210d3",
    "metadata": {},
    "outputs": [
@@ -2556,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 64,
    "id": "be68addb",
    "metadata": {},
    "outputs": [
@@ -3318,7 +3327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 65,
    "id": "42be02d8",
    "metadata": {},
    "outputs": [
