--- a/example_fastapi_react_vite_optimized copy 2.ipynb
+++ b/example_fastapi_react_vite_optimized copy 2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "bf67aa45",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "80a61c56",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "760d795c",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "f9cc997d",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,6 @@
     "\n",
     "[build.environment]\n",
     "NODE_VERSION = \"18.20.0\"\n",
-    "VITE_API_URL = \"https://docker-dev-template.onrender.com/api/v1\"\n",
     "\n",
     "[[redirects]]\n",
     "  from = \"/*\"\n",
@@ -537,26 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3cdf88e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting backend/app/core/__init__.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile backend/app/core/__init__.py\n",
-    "\"\"\"Core package for application configuration.\"\"\" "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "eb81edf7",
    "metadata": {},
    "outputs": [
@@ -575,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "f25a842a",
    "metadata": {},
    "outputs": [
@@ -598,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "2fdf9832",
    "metadata": {},
    "outputs": [
@@ -617,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "6e486eda",
    "metadata": {},
    "outputs": [
@@ -636,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "a8614215",
    "metadata": {},
    "outputs": [
@@ -655,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "7ba9eff0",
    "metadata": {},
    "outputs": [
@@ -674,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "87336ac7",
    "metadata": {},
    "outputs": [
@@ -701,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "bda8c3a0",
    "metadata": {},
    "outputs": [
@@ -755,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "c3cd52d9",
    "metadata": {},
    "outputs": [
@@ -790,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "id": "33fe907d",
    "metadata": {},
    "outputs": [
@@ -897,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "id": "0e3bbb80",
    "metadata": {},
    "outputs": [
@@ -1011,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "id": "be2f77ed",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "id": "4ba5076d",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "id": "d2340c8c",
    "metadata": {},
    "outputs": [
@@ -1479,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "id": "9132b544",
    "metadata": {},
    "outputs": [
@@ -1615,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "c401848b",
    "metadata": {},
    "outputs": [
@@ -1633,8 +1613,7 @@
     "\n",
     "from fastapi import APIRouter\n",
     "\n",
-    "# 🔧 Adjusted imports to use relative paths for Render deployment\n",
-    "from app.api.api_v1.endpoints import iris, cancer, models\n",
+    "from backend.app.api.api_v1.endpoints import iris, cancer, models\n",
     "\n",
     "api_router = APIRouter()\n",
     "\n",
@@ -1646,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "89f03a64",
    "metadata": {},
    "outputs": [
@@ -1677,9 +1656,6 @@
     "from ...schemas.common import HealthResponse, ModelInfo\n",
     "\n",
     "# Import existing ML utilities\n",
-    "# 🔧 Note: These backend.ML imports are for optional ML training modules\n",
-    "#     that may not be present in all deployments. They're kept as-is since\n",
-    "#     they're already wrapped in try-except and are optional.\n",
     "try:\n",
     "    from backend.ML.mlops.experiment_utils import setup_mlflow_experiment\n",
     "    from backend.ML.mlops.training import run_all_trainings\n",
@@ -2077,13 +2053,12 @@
     "\n",
     "# Global model service instance\n",
     "model_service = ModelService()\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "1d87ca37",
    "metadata": {},
    "outputs": [
@@ -2104,11 +2079,9 @@
     "from fastapi import FastAPI\n",
     "from fastapi.middleware.cors import CORSMiddleware\n",
     "\n",
-    "# 🔧 Adjusted imports to use \"app.\" as the top-level package\n",
-    "#     so that when rootDir=backend, Python can resolve modules.\n",
-    "from app.core.config import settings\n",
-    "from app.api.api_v1.api import api_router\n",
-    "from app.services.ml.model_service import model_service\n",
+    "from backend.app.core.config import settings\n",
+    "from backend.app.api.api_v1.api import api_router\n",
+    "from backend.app.services.ml.model_service import model_service\n",
     "\n",
     "# Configure logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
@@ -2175,12 +2148,6 @@
     "        \"\"\"Health check endpoint.\"\"\"\n",
     "        return await model_service.get_health_status()\n",
     "\n",
-    "    @app.head(\"/health\", include_in_schema=False)\n",
-    "    async def health_head():\n",
-    "        \"\"\"Health check HEAD endpoint for Render probes.\"\"\"\n",
-    "        from fastapi.responses import Response\n",
-    "        return Response(status_code=200)\n",
-    "\n",
     "    return app\n",
     "\n",
     "\n",
@@ -2198,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "id": "ebec606e",
    "metadata": {},
    "outputs": [
@@ -2251,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "id": "7e8150b1",
    "metadata": {},
    "outputs": [
@@ -2275,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "id": "c3974081",
    "metadata": {},
    "outputs": [
@@ -2320,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "id": "d1a46149",
    "metadata": {},
    "outputs": [
@@ -2366,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "id": "2dcd9330",
    "metadata": {},
    "outputs": [
@@ -2398,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "id": "239c57ce",
    "metadata": {},
    "outputs": [
@@ -2448,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "id": "d0c210d3",
    "metadata": {},
    "outputs": [
@@ -2464,8 +2431,9 @@
     "%%writefile frontend/src/services/api.js\n",
     "import axios from 'axios';\n",
     "\n",
+    "// Create axios instance with base configuration\n",
     "const api = axios.create({\n",
-    "  baseURL: import.meta.env.VITE_API_URL || '/api/v1',\n",
+    "  baseURL: '/api/v1', // Use proxy\n",
     "  timeout: 30000,\n",
     "  headers: {\n",
     "    'Content-Type': 'application/json',\n",
@@ -2597,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "id": "be68addb",
    "metadata": {},
    "outputs": [
@@ -3359,7 +3327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "id": "42be02d8",
    "metadata": {},
    "outputs": [
