--- a/example_fastapi_react_vite_optimized copy.ipynb
+++ b/example_fastapi_react_vite_optimized copy.ipynb
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "c401848b",
    "metadata": {},
    "outputs": [
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "89f03a64",
    "metadata": {},
    "outputs": [
@@ -2092,6 +2092,17 @@
      "output_type": "stream",
      "text": [
       "Overwriting backend/app/main.py\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
