updating react/fastapi template sections

--- a/railway_fastapi_template copy.ipynb
+++ b/railway_fastapi_template copy.ipynb
@@ -2,54 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d22da19e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting template/fastapi/README.md\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile template/fastapi/README.md\n",
-    "---\n",
-    "title: FastAPI\n",
-    "description: A FastAPI server\n",
-    "tags:\n",
-    "  - fastapi\n",
-    "  - hypercorn\n",
-    "  - python\n",
-    "---\n",
-    "\n",
-    "# FastAPI Example\n",
-    "\n",
-    "This example starts up a [FastAPI](https://fastapi.tiangolo.com/) server.\n",
-    "\n",
-    "[![Deploy on Railway](https://railway.app/button.svg)](https://railway.app/template/-NvLj4?referralCode=CRJ8FE)\n",
-    "## ✨ Features\n",
-    "\n",
-    "- FastAPI\n",
-    "- [Hypercorn](https://hypercorn.readthedocs.io/)\n",
-    "- Python 3\n",
-    "\n",
-    "## 💁‍♀️ How to use\n",
-    "\n",
-    "- Clone locally and install packages with pip using `pip install -r requirements.txt`\n",
-    "- Run locally using `hypercorn main:app --reload`\n",
-    "\n",
-    "## 📝 Notes\n",
-    "\n",
-    "- To learn about how to use FastAPI with most of its features, you can visit the [FastAPI Documentation](https://fastapi.tiangolo.com/tutorial/)\n",
-    "- To learn about Hypercorn and how to configure it, read their [Documentation](https://hypercorn.readthedocs.io/)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "09aa2778",
    "metadata": {},
    "outputs": [
@@ -67,7 +20,7 @@
     "__pycache__/\n",
     "*.py[cod]\n",
     "*$py.class\n",
-    "\n",
+    ".env.example\n",
     "# C extensions\n",
     "*.so\n",
     "\n",
@@ -227,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "14d18eb9",
    "metadata": {},
    "outputs": [
@@ -241,13 +194,21 @@
    ],
    "source": [
     "%%writefile template/fastapi/requirements.txt\n",
-    "fastapi==0.100.0\n",
-    "hypercorn==0.14.4\n"
+    "fastapi>=0.104.0\n",
+    "hypercorn==0.14.4\n",
+    "uvicorn>=0.24.0\n",
+    "mlflow>=2.8.0\n",
+    "numpy>=1.24.0\n",
+    "pandas>=2.1.0\n",
+    "scikit-learn>=1.3.0\n",
+    "python-dotenv>=1.0.0\n",
+    "pydantic>=2.4.2\n",
+    "python-multipart>=0.0.6\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "c3c58cd2",
    "metadata": {},
    "outputs": [
@@ -267,14 +228,53 @@
     "    \"builder\": \"NIXPACKS\"\n",
     "  },\n",
     "  \"deploy\": {\n",
-    "    \"startCommand\": \"hypercorn main:app --bind \\\"[::]:$PORT\\\"\"\n",
+    "    \"startCommand\": \"hypercorn main:app --bind \\\"[::]:$PORT\\\"\",\n",
+    "    \"restartPolicyType\": \"ON_FAILURE\",\n",
+    "    \"restartPolicyMaxRetries\": 10\n",
+    "  },\n",
+    "  \"environments\": {\n",
+    "    \"production\": {\n",
+    "      \"variables\": {\n",
+    "        \"FRONTEND_URL\": \"https://your-react-app-domain.com\"\n",
+    "      }\n",
+    "    }\n",
     "  }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "3cda74c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting template/fastapi/.env.example\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile template/fastapi/.env.example\n",
+    "# Environment variables for the FastAPI app\n",
+    "PORT=8000\n",
+    "FRONTEND_URL=http://localhost:3000\n",
+    "ENVIRONMENT=development\n",
+    "RAILWAY_API_KEY=25f7a599-3212-40d1-82cf-db50727aad35\n",
+    "# MLflow settings (if using MLflow tracking)\n",
+    "MLFLOW_TRACKING_URI=\n",
+    "MLFLOW_EXPERIMENT_NAME=\n",
+    "\n",
+    "# Add any other API keys or configuration here\n",
+    "API_KEY=\n",
+    "DATABASE_URL="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "30da558a",
    "metadata": {},
    "outputs": [
@@ -289,13 +289,70 @@
    "source": [
     "%%writefile template/fastapi/main.py\n",
     "from fastapi import FastAPI\n",
+    "from fastapi.middleware.cors import CORSMiddleware\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "app = FastAPI()\n",
+    "load_dotenv()\n",
     "\n",
+    "app = FastAPI(\n",
+    "    title=\"ML API\",\n",
+    "    description=\"Machine Learning API for React Frontend\",\n",
+    "    version=\"1.0.0\",\n",
+    "    openapi_url=\"/api/v1/openapi.json\",\n",
+    "    docs_url=\"/api/v1/docs\"\n",
+    ")\n",
+    "\n",
+    "# Updated CORS configuration for React frontend\n",
+    "origins = [\n",
+    "    \"http://localhost:3000\",  # React development server\n",
+    "    \"http://localhost:3001\",  # Alternative React port\n",
+    "    \"https://localhost:3000\", # HTTPS version\n",
+    "    \"https://your-react-app.vercel.app\",  # Replace with your React deployment URL\n",
+    "    \"https://your-react-app.netlify.app\", # Replace with your React deployment URL\n",
+    "]\n",
+    "\n",
+    "# Add environment variable for production origins\n",
+    "if os.getenv(\"FRONTEND_URL\"):\n",
+    "    origins.append(os.getenv(\"FRONTEND_URL\"))\n",
+    "\n",
+    "app.add_middleware(\n",
+    "    CORSMiddleware,\n",
+    "    allow_origins=origins,\n",
+    "    allow_credentials=True,\n",
+    "    allow_methods=[\"GET\", \"POST\", \"PUT\", \"DELETE\", \"OPTIONS\"],\n",
+    "    allow_headers=[\"*\"],\n",
+    "    expose_headers=[\"*\"]\n",
+    ")\n",
+    "\n",
+    "# Add a health check endpoint\n",
+    "@app.get(\"/health\")\n",
+    "async def health_check():\n",
+    "    return {\"status\": \"healthy\", \"message\": \"API is running\"}\n",
+    "\n",
+    "# Add a root endpoint for testing\n",
     "@app.get(\"/\")\n",
     "async def root():\n",
-    "    return {\"greeting\": \"Hello, World!\", \"message\": \"Welcome to FastAPI!\"}"
+    "    return {\"message\": \"ML API is running\", \"docs\": \"/api/v1/docs\"}\n",
+    "\n",
+    "# Add a simple test endpoint for ML functionality\n",
+    "@app.get(\"/api/v1/test\")\n",
+    "async def test_endpoint():\n",
+    "    return {\"message\": \"Test endpoint working\", \"status\": \"success\"}\n",
+    "\n",
+    "# Add a simple prediction endpoint placeholder\n",
+    "@app.post(\"/api/v1/predict\")\n",
+    "async def predict(data: dict):\n",
+    "    return {\"prediction\": \"placeholder\", \"input\": data, \"status\": \"success\"}\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fad19a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
