updating to have more modularity

--- a/notebooks/4090_gpu/docker_uv_env_setup_4090.ipynb
+++ b/notebooks/4090_gpu/docker_uv_env_setup_4090.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -57,7 +57,7 @@
         }
       ],
       "source": [
-        "%%writefile .devcontainer/.dockerignore\n",
+        "%%writefile ../../.devcontainer/.dockerignore\n",
         "# .dockerignore - Reduce Docker build context to prevent layer corruption\n",
         "# Based on analysis of \"invalid tar header\" fixes\n",
         "\n",
@@ -255,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -267,7 +267,7 @@
         }
       ],
       "source": [
-        "%%writefile dev.env\n",
+        "%%writefile ../../dev.env\n",
         "ENV_NAME=docker_dev_template \n",
         "# Fixed ports you actually care about\n",
         "HOST_JUPYTER_PORT=8891\n",
@@ -314,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -326,7 +326,7 @@
         }
       ],
       "source": [
-        "%%writefile .env\n",
+        "%%writefile ../../.env\n",
         "ENV_NAME=docker_dev_template \n",
         "# Fixed ports you actually care about\n",
         "HOST_JUPYTER_PORT=8891\n",
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -384,7 +384,7 @@
         }
       ],
       "source": [
-        "%%writefile .devcontainer/.env\n",
+        "%%writefile ../../.devcontainer/.env\n",
         "ENV_NAME=docker_dev_template \n",
         "# Fixed ports you actually care about\n",
         "HOST_JUPYTER_PORT=8891\n",
@@ -444,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -456,7 +456,7 @@
         }
       ],
       "source": [
-        "%%writefile .devcontainer/devcontainer.json\n",
+        "%%writefile ../../.devcontainer/devcontainer.json\n",
         "{\n",
         "  \"name\": \"docker_dev_template_uv\",\n",
         "  \"dockerComposeFile\": \"../docker-compose.yml\",\n",
@@ -504,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -516,7 +516,7 @@
         }
       ],
       "source": [
-        "%%writefile .devcontainer/Dockerfile\n",
+        "%%writefile ../../.devcontainer/Dockerfile\n",
         "# ── Base with GPU drivers ──────────────────────────────────────────────────────\n",
         "FROM nvidia/cuda:12.3.2-cudnn9-devel-ubuntu22.04\n",
         "\n",
@@ -591,7 +591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -603,7 +603,7 @@
         }
       ],
       "source": [
-        "%%writefile docker-compose.yml\n",
+        "%%writefile ../../docker-compose.yml\n",
         "# docker-compose.yml\n",
         "services:\n",
         "  datascience:\n",
@@ -689,7 +689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -701,7 +701,7 @@
         }
       ],
       "source": [
-        "%%writefile pyproject.toml\n",
+        "%%writefile ../../pyproject.toml\n",
         "[project]\n",
         "name = \"docker_dev_template\"\n",
         "version = \"0.1.0\"\n",
@@ -872,7 +872,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -884,7 +884,7 @@
         }
       ],
       "source": [
-        "%%writefile tests/test_pytorch_gpu.py\n",
+        "%%writefile ../../tests/test_pytorch_gpu.py\n",
         "#!/usr/bin/env python3\n",
         "\"\"\"\n",
         "test_gpu.py\n",
@@ -953,7 +953,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -965,7 +965,7 @@
         }
       ],
       "source": [
-        "%%writefile tests/test_uv.py\n",
+        "%%writefile ../../tests/test_uv.py\n",
         "# Test UV environment setup\n",
         "print(\"🔍 Testing UV environment...\")\n",
         "import subprocess\n",
@@ -997,7 +997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1009,7 +1009,7 @@
         }
       ],
       "source": [
-        "%%writefile tests/test_pytorch.py\n",
+        "%%writefile ../../tests/test_pytorch.py\n",
         "# Test PyTorch GPU support\n",
         "print(\"\\n🎮 Testing PyTorch GPU support...\")\n",
         "try:\n",
@@ -1044,7 +1044,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1056,7 +1056,7 @@
         }
       ],
       "source": [
-        "%%writefile tests/test_uv.py\n",
+        "%%writefile ../../tests/test_uv.py\n",
         "# Test other critical packages\n",
         "print(\"\\n📦 Testing other critical packages...\")\n",
         "\n",
@@ -1082,7 +1082,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1094,7 +1094,7 @@
         }
       ],
       "source": [
-        "%%writefile tests/test_summary.py\n",
+        "%%writefile ../../tests/test_summary.py\n",
         "\n",
         "# Summary and next steps\n",
         "print(\"\\n\" + \"=\"*60)\n",
