updated with docker dev template for 5090

--- a/notebooks/5080_gpu/basic_models.ipynb
+++ b/notebooks/5080_gpu/basic_models.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fb877603",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
      "text": [
       "\n",
       "=== ENV SNAPSHOT (selected) ===\n",
-      "JAX_PLATFORM_NAME='gpu'\n",
+      "JAX_PLATFORM_NAME=''\n",
       "JAX_PLATFORMS=None\n",
       "CUDA_VISIBLE_DEVICES='0'\n",
       "XLA_FLAGS='--xla_force_host_platform_device_count=1'\n",
@@ -39,44 +39,11 @@
       "===============================\n",
       "\n",
       "=== NVIDIA-SMI ===\n",
-      "Fri Aug 22 20:47:21 2025       \n",
+      "Thu Aug 28 20:31:54 2025       \n",
       "GPU is visible to the container/process.\n",
       "==================\n",
       "\n",
-      "=== PyTorch ===\n",
-      "torch.__version__=2.9.0.dev20250822+cu128\n",
-      "torch.version.cuda=12.8\n",
-      "torch.cuda.is_available()=True\n",
-      "torch.cuda.device_count()=1\n",
-      "current device name: NVIDIA GeForce RTX 5080 Laptop GPU\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/app/.venv/lib/python3.10/site-packages/torch/cuda/__init__.py:410: UserWarning: PYTORCH_CUDA_ALLOC_CONF is deprecated, use PYTORCH_ALLOC_CONF instead (Triggered internally at /pytorch/c10/core/AllocatorConfig.cpp:28.)\n",
-      "  torch._C._cuda_init()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "small matmul check (CUDA): OK\n",
-      "==============\n",
-      "\n",
-      "=== JAX ===\n",
-      "jax.__version__=0.6.2\n",
-      "jaxlib.__version__=0.6.2\n",
-      "Device: kind=NVIDIA GeForce RTX 5080 Laptop GPU, platform=gpu, id=0\n",
-      "small matmul check (JAX default backend): OK\n",
-      "===========\n",
-      "\n",
-      "=== TensorFlow ===\n",
-      "TensorFlow import failed: ModuleNotFoundError(\"No module named 'tensorflow'\")\n",
-      "==================\n",
-      "\n"
+      "=== PyTorch ===\n"
      ]
     }
    ],
@@ -231,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "117b6613",
    "metadata": {},
    "outputs": [
@@ -457,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f4fad220",
    "metadata": {},
    "outputs": [
